[Anjali] REFACTORED : implemented forget and reset password and done some alterations in swagger
