# src/routes/note.route.ts
@@ -17,50 +17,50 @@ class NoteRoutes {
     this.router.post(
       '/create',
       this.noteValidator.createNote,    
-      userAuth,                         
+      userAuth('auth'),                         
       this.noteController.createNote    
     );
 
     // Route for getting note by poviding noteID
     this.router.get(
       '/:id',
-      userAuth,                         
+      userAuth('auth'),                         
       this.noteController.getNote      
     );
 
     // Route for getting all notes for the authenticated user
     this.router.get(
       '/',
-      userAuth,                        
+      userAuth('auth'),                        
       this.noteController.getUserNotes 
     );
     
     // Route for updating a note by providing noteID
     this.router.put(
-      '/:id',
+      '/update/:id',
       this.noteValidator.updateNote, 
-      userAuth,
+      userAuth('auth'),
       this.noteController.updateNote    
     );
 
     // Route for toggling archive status by providing noteID
     this.router.put(
       '/archive/:id',
-      userAuth,                         
+      userAuth('auth'),                         
       this.noteController.toggleArchive // Toggle archive status here
     );
 
     // Route to toggle trash status (move to trash or restore)
     this.router.put(
       '/trash/:id', 
-      userAuth, 
+      userAuth('auth'), 
       this.noteController.toggleTrash
     );
 
     // Route to permanently delete a note (only if it's in trash)
     this.router.delete(
       '/deletePermanently/:id', 
-      userAuth, 
+      userAuth('auth'), 
       this.noteController.deletePermanently
     );
     
