# src/validators/user.validator.ts
@@ -30,6 +30,30 @@ class UserValidator {
     next();
   };
 
+  // Validation for forgot password
+  public validateForgotPassword = (req: Request, res: Response, next: NextFunction): void => {
+    const schema = Joi.object({
+      email: Joi.string().email().required(),
+    });
+    const { error } = schema.validate(req.body);
+    if (error) {
+      return next(error); // Return to stop further execution
+    }
+    next();
+  };
+
+  // Validation for reset password
+  public validateResetPassword = (req: Request, res: Response, next: NextFunction): void => {
+    const schema = Joi.object({
+      newPassword: Joi.string().min(6).required(), // Ensure the new password meets criteria
+    });
+    const { error } = schema.validate(req.body);
+    if (error) {
+      return next(error); // Return to stop further execution
+    }
+    next();
+  };
+
 }
 
 export default UserValidator;
